Remove duplicate code

--- a/analysis.html
+++ b/analysis.html
@@ -1622,7 +1622,7 @@
 
 </body>
 
-<script>
+<!-- <script>
   var data = {};
   var timezone = - (new Date().getTimezoneOffset()) / 60;
   data['timezone'] = timezone;
@@ -1644,7 +1644,7 @@
 
         });
       };
-</script>
+</script> -->
 <script>
     // Scroll UP
   window.addEventListener("scroll", () => {
