--- a/analysis.html
+++ b/analysis.html
@@ -44,7 +44,7 @@
       display: block;
     }
   </style>
-  
+
   <body>
     <!-- page header starting -->
     <nav class="navbar navbar-sticky-top Gradient">
@@ -1888,6 +1888,7 @@
         console.log('period_start', period_start)
         console.log('period_end', period_end)
         $('#selectFeatures').attr('disabled', false)
+        $('#excludeFeatures').attr('disabled', false)
       })
     },
     LockPlugin: {
