--- a/analysis.html
+++ b/analysis.html
@@ -59,6 +59,8 @@
       <div class="modal-dialog modal-dialog-centered justify-content-center">
         <div class="modal-content">
           <div class="modal-body pb-0">
+            <label class="commonLabel" for="">Exclude Activities<i title="text text text" class="fa-solid fa-info-circle"  data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Select activities to exclude from the analysis. Multiple items can be chosen"></i>
+            </label>
             <p class="mb-0"> Your data is being analyzed, and it might take some time...
               <br>
               So please come back later ;-)</p>
@@ -76,6 +78,7 @@
     <div class="pop-up-delete">
       <img class="del-icon-pop" src="../assets/images/cross_icon.svg" alt="">
       <div class="popup_icon">
+        
         <img src="assets/images/delete_icon2.svg" alt="">
       </div>
       <h3 class="pop-title">Deleting Record</h3>
@@ -104,7 +107,7 @@
           <!-- feature select -->
           <div class="row mb-3">
             <div class="col-5 my-auto">
-              <label class="commonLabel" for="">Analyze Activities<i title="text text text" class="fa-solid fa-info-circle " data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Choose activities for analysis. Up to two items can be selected"></i>
+              <label class="commonLabel" for="">Analyze Activities<i title="text text text" class="fa-solid fa-info-circle " data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Choose activities for analysis. Up to two items can be selected"></i>
               </label>
             </div>
             <div class="col-7">
