--- a/analysis.html
+++ b/analysis.html
@@ -1666,16 +1666,19 @@
   });
 </script>
 <script>
+  $(document).ready(function() {
   var data = {};
   var notesStars = {};
   var notes = [
       {
         'datetime_tz': '2022-02-12 15:16:33.267582',
-        'notes': "I'm Rizwan Ali, full stack developer."
+        'notes': "I'm Rizwan Ali, full stack developer.",
+        "stars": 1
       },
       {
         'datetime_tz': '2022-02-10 15:00:33.267582',
-        'notes': 'From Pakistan'
+        'notes': 'From Pakistan',
+        "stars": 5
       }
   ];
   var timezone = - (new Date().getTimezoneOffset()) / 60;
@@ -1765,10 +1768,19 @@
       hour12: true
     })
 
-    let note = notes.find(x => x.datetime_tz == getDate.textContent)
+    var note = notes.find(x => x.datetime_tz == getDate.textContent)
     r.querySelector("textarea").value = note["notes"]
     r.querySelector("textarea")["id"] = `notes-${getDate.textContent.replace(/\s/g, '*')}`
     r.querySelector('.rating')['id'] = `rating-${getDate.textContent.replace(/\s/g, '*')}`
+      for(var i =0; i < note['stars']; i++) {
+        for (const child of r.querySelector('.rating').children[0].children) {
+          if(child.tagName == "I" && child.dataset.index == i) {
+            child.style["color"] = "rgb(255, 193, 7)"
+            child.classList.add("fa-star")
+            child.classList.add("fas")
+          }
+        }
+      }
   })
 
   function createOptions(selector, dataOpt) {
@@ -1916,5 +1928,6 @@
       inseparable: true,
     }
   });
+});
 </script>
 </html>
