--- a/analysis.html
+++ b/analysis.html
@@ -1629,7 +1629,7 @@
   var data = {};
   var timezone = - (new Date().getTimezoneOffset()) / 60;
   data['timezone'] = timezone;
-  data['datetime_tz'] = moment(new Date()).format('YYYY-MM-DD hh:mm:ss');
+  data['datetime_tz'] = moment(new Date()).format('YYYY-MM-DD HH:mm:ss');
   // theme select2
   var features = ['EmoFreq', 'Energy', 'Having Fun', 'Sports', 'Alcohol', 'Yoga', 'Lempa', 'Nesamone'];
   var features_ex = ['EmoFreq', 'Energy', 'Having Fun', 'Sports', 'Alcohol', 'Yoga', 'Lempa', 'Nesamone'];
