--- a/more.html
+++ b/more.html
@@ -211,23 +211,63 @@
               <div class="row input-fields">
                 <div class="col-7 my-auto">
                   <label class="commonLabel" for="">Emotions Page Language
+				  <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover"
+                      data-bs-toggle="popover" data-bs-placement="bottom"
+                      data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                   </label>
                 </div>
                 <div class="col-5">
                   <select class="form-select form-control form-select-sm" aria-placeholder="Select Reason">
-                    <option selected>Lituanian</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
+                    <option selected>English</option>
+                    <option value="1">English</option>
+                    <option value="2">Lituanian</option>
                     <option value="3">One</option>
                   </select>
                 </div>
               </div>
+			  
+			  <div class="input-bottom"></div>
+              <div class="row input-fields">
+                <div class="col-7 my-auto">
+                  <label class="commonLabel" for="">Emotions List Level
+				  <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover"
+                      data-bs-toggle="popover" data-bs-placement="bottom"
+                      data-bs-content="Option to select the level of emotions list. Slider (Unhappy & Happy) or Complete List (the Wheel of Emotions)"></i>
+					  </label>
+                </div>
+                <div class="col-5">
+                  <select class="form-select form-control form-select-sm" aria-placeholder="Select Reason">
+                    <option selected>Complete List</option>
+                    <option value="1">Complete List</option>
+                    <option value="2">Slider</option>
+                  </select>
+                </div>
+              </div>
+			   <div class="row input-fields">
+                <div class="col-10 my-auto">
+                  <label class="commonLabel" for="">Random Level Increase
+                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover"
+                      data-bs-toggle="popover" data-bs-placement="bottom"
+                      data-bs-content="When enabled, once in a while, it suggests using the Wheel of Emotions to improve the EQ"></i>
+                  </label>
+                </div>
+                <div class="col-2 my-auto">
+                  <div class="switch-button r" id="button-1">
+                    <input type="checkbox" class="checkbox" />
+                    <div class="knobs"></div>
+                    <div class="layer"></div>
+                  </div>
+                </div>
+              </div>
 
 
-
+			  <div class="input-bottom"></div>
               <div class="row input-fields">
                 <div class="col-4 my-auto">
                   <label class="commonLabel" for="">Delete Account
+				  <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover"
+                      data-bs-toggle="popover" data-bs-placement="bottom"
+                      data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                   </label>
                 </div>
                 <div class="col-8">
