--- a/more.html
+++ b/more.html
@@ -78,7 +78,7 @@
                   <label class="commonLabel" for="">Name</label>
                 </div>
                 <div class="col-9">
-                  <input type="text" class="form-control input-text" placeholder="John Smith" />
+                  <input type="text" class="form-control input-text" id="name"  placeholder="John Smith" />
                 </div>
               </div>
               <div class="row input-fields">
@@ -86,7 +86,7 @@
                   <label class="commonLabel" for="">Email </label>
                 </div>
                 <div class="col-9">
-                  <input type="email" class="form-control input-text" placeholder="Johnsmith@gmail.com" />
+                  <input type="email" readonly id="email" class="form-control input-text" placeholder="Johnsmith@gmail.com" value="rizwanali1055@gmail.com" />
                 </div>
               </div>
               <div class="row input-fields">
@@ -94,7 +94,7 @@
                   <label class="commonLabel" for="">Weight (Kg) </label>
                 </div>
                 <div class="col-9">
-                  <input type="text" class="form-control input-text" placeholder="79" />
+                  <input type="text" id="weight" class="form-control input-text" placeholder="79" />
                 </div>
               </div>
               <div class="row input-fields">
@@ -102,7 +102,7 @@
                   <label class="commonLabel" for="">Height (cm) </label>
                 </div>
                 <div class="col-9">
-                  <input type="text" class="form-control input-text" placeholder="187" />
+                  <input type="text" id="height" class="form-control input-text" placeholder="187" />
                 </div>
               </div>
               <div class="row input-fields">
@@ -110,7 +110,7 @@
                   <label class="commonLabel" for="">Gender </label>
                 </div>
                 <div class="col-9">
-                  <select class="form-select form-control form-select-sm" aria-placeholder="Select Reason">
+                  <select id="gender" class="form-select form-control form-select-sm" aria-placeholder="Select Reason">
                     <option selected>Gender</option>
                     <option value="1">Male</option>
                     <option value="2">Female</option>
@@ -124,7 +124,7 @@
                   </label>
                 </div>
                 <div class="col-9">
-                  <input type="text" class="form-control input-text" placeholder="20 Dec, 2020" />
+                  <input type="text" id="dob" class="form-control input-text" placeholder="20 Dec, 2020" />
                 </div>
               </div>
               <div class="borderLine"></div>
@@ -139,7 +139,7 @@
                   </label>
                 </div>
                 <div class="col-5">
-                  <select class="form-select form-control form-select-sm" aria-placeholder="Select Reason">
+                  <select id="emotions-language" class="form-select form-control form-select-sm" aria-placeholder="Select Reason">
                     <option selected>English</option>
                     <option value="1">English</option>
                     <option value="2">Lituanian</option>
@@ -158,7 +158,7 @@
 					  </label>
                 </div>
                 <div class="col-5">
-                  <select class="form-select form-control form-select-sm" aria-placeholder="Select Reason">
+                  <select class="form-select form-control form-select-sm" aria-placeholder="Select Reason" id="emotions-level">
                     <option selected>Complete List</option>
                     <option value="1">Complete List</option>
                     <option value="2">Slider</option>
@@ -202,7 +202,7 @@
 
                 <div>
                   <div class="borderLine"></div>
-                  <button href="" class="btn_save">SAVE</button>
+                  <button href="" class="btn_save" id="save-profile-settings">SAVE</button>
                 </div>
               </div>
 
@@ -690,6 +690,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>  
   <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/more.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
   </script>
@@ -701,6 +702,33 @@
     function decrement() {
       document.getElementById('numberValue').stepDown();
     }
+
+    $(document).ready(function() {
+      function profileAndSettings () {
+        let userInfo = {}
+        let name = $('#name').val();
+        let email = $('#email').val();
+        let weight = $('#weight').val();
+        let heigt = $('#height').val();
+        let gender = $('#gender').val();
+        let dob = $('#dob').val();
+        let language = $('#emotions-language').val();
+        let emotionsLevel = $('#emotions-level').val();
+        userInfo = {
+          name,
+          email,
+          weight,
+          heigt,
+          gender,
+          dob,
+          language,
+          emotionsLevel
+        }
+        console.log(userInfo)
+      }
+
+      $('#save-profile-settings').click(profileAndSettings)
+    })
   </script>
 </body>
 
