--- a/more.html
+++ b/more.html
@@ -267,7 +267,7 @@
               </div>
               <div class="row input-fields">
                 <div class="col-5 my-auto">
-                  <label class="commonLabel" for="">Location Permitions
+                  <label class="commonLabel" for="">Weather & Location Permissions
                     <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover"
                       data-bs-toggle="popover" data-bs-placement="bottom"
                       data-bs-content="Analysis if moon phase has an impact on your well being"></i>
@@ -320,15 +320,7 @@
 
               <!-- old features -->
               <div class="input-bottom"></div>
-              <div class="row input-fields">
-                <div class="col-10 my-auto">
-                  <label class="commonLabel" for="">Weather & Location Permissions
-                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover"
-                      data-bs-toggle="popover" data-bs-placement="bottom"
-                      data-bs-content="Analysis if moon phase has an impact on your well being"></i>
-                  </label>
-                </div>
-              </div>
+
 
             </div>
           </div>
@@ -388,7 +380,7 @@
 
                   <div>
                     <div class="borderLine"></div>
-                    <button href="" class="btn_save">SAVE</button>
+                    <button href="" class="btn_save">SEND</button>
                   </div>
                 </div>
 
@@ -439,7 +431,7 @@
                   <input type="time" class="form-control" value="10:05 AM" />
               </div>
                 <div class="col-8 my-auto">
-                    <input type="text" class="form-control text-center  input-text" placeholder="7:00" />
+                    <input type="text" class="form-control text-left  input-text" placeholder="It's time for self reflection" />
                 </div>
                 
                 <div class="col-1 p-0" style="align-self: center">
@@ -452,7 +444,7 @@
                   <input type="time" class="form-control" value="10:05 AM" />
                 </div>
                 <div class="col-8 my-auto">
-                    <input type="text" class="form-control text-center  input-text"  placeholder="7:00" />
+                    <input type="text" class="form-control text-left  input-text"  placeholder="how do you feel now?" />
                 </div>
                
                 <div class="col-1 p-0" style="align-self: center">
