Add time picker

--- a/more.html
+++ b/more.html
@@ -19,6 +19,8 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
     <!-- Custom css -->
     <link rel="stylesheet" href="./assets/css/style.v2.0.css" />
+
+    <link rel="stylesheet" type="text/css" href="https://www.jonthornton.com/jquery-timepicker/jquery.timepicker.css">
     <title>Home</title>
   </head>
   <body>
@@ -380,7 +382,7 @@
                     <div id="remindersRow">
                       <div class="row input-fields">
                         <div class="col-3 pe-md-3 pe-0">
-                          <input type="time" class="form-control" value="22:00" />
+                          <input type="text" class="time form-control" value="22:00" />
                         </div>
                         <div class="col-8 my-auto">
                           <input type="text" class="form-control text-left  input-text" placeholder="It's time for self reflection" />
@@ -391,7 +393,7 @@
                       </div>
                       <div class="row input-fields">
                         <div class="col-3 pe-md-3 pe-0">
-                          <input type="time" class="form-control" value="10:05" />
+                          <input type="text" class="time form-control" value="10:05" />
                         </div>
                         <div class="col-8 my-auto">
                           <input type="text" class="form-control text-left  input-text"  placeholder="how do you feel now?" />
@@ -619,6 +621,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
+    <script src="https://www.jonthornton.com/jquery-timepicker/jquery.timepicker.js"></script>
+
     <script>
       function increment() {
         document.getElementById('numberValue').stepUp();
@@ -671,6 +675,14 @@
 
           node.find('input').first().val("")
           node.find('input').last().val("")
+
+          node.find('input').first().timepicker({
+           'minTime': '09:00',
+           'maxTime': '23:30',
+           'timeFormat': 'H:i'
+          }); 
+
+
           let reminders = [];
           let obj = {};
           let data = {};
@@ -734,6 +746,14 @@
       $(window).on('beforeunload', function(){
         // return 'Are you sure you want to leave?';
         submitProfileSetting();
+      });
+
+      $(function(){
+        $('.time').timepicker({
+         'minTime': '09:00',
+         'maxTime': '23:30',
+         'timeFormat': 'H:i'
+        }); 
       });
     </script>
   </body>
